<resources>
    <string name="app_name">ChoTamNaUlitce</string>
    <string name="moscow">Москва</string>
    <string name="toolbar_title">Чо там на улице?</string>
    <string name="longitude">Долгота</string>
    <string name="latitude">Широта</string>
    <string name="cho_tam">Чо там с погодой?</string>
    <string name="temperature_actual">На градуснике:</string>
    <string name="temperature_feels">Но по ощущениям:</string>
    <string name="humidity">И влажность:</string>
    <string name="condition">А вообще на улице:</string>
    <string name="wind_speed">И ветер:</string>
    <string name="wind_direction">Дует на:</string>
    <string name="location_change">location change</string>
    <string name="return_to_cities_list">Вернуться к списку</string>
    <string name="repo_okhttp">OkHTTP репозиторий</string>
    <string name="repo_retrofit">Retrofit репозиторий</string>
    <string name="repo_local">Локальный репозиторий</string>
    <string name="repo_room">Room репозиторий</string>
    <string name="contacts">Контакты</string>
    <string name="room_history">история запросов</string>
    <string name="map_location">Карты</string>
    <string name="maps">Google-карта</string>
    <string name="address">address</string>
    <string name="search">Поиск</string>
</resources>