<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/weather_details_fragment"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/city_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        tools:text="@string/moscow" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/latitude_entry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/latitude"
                android:inputType="textMultiLine|text"
                android:textSize="24sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/longitude_entry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/longitude"
                android:inputType="textMultiLine|text"
                android:textSize="24sp" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/condition_image_view"
        android:layout_width="match_parent"
        android:layout_gravity="center_horizontal"
        android:layout_height="150dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:gravity="center"
        android:textColor="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/temperature_actual_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/temperature_actual"
            android:inputType="textMultiLine|text"
            android:textSize="24sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:gravity="center"
        android:textColor="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/temperature_feels_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/temperature_feels"
            android:inputType="textMultiLine|text"
            android:textSize="24sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:gravity="center"
        android:textColor="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/humidity_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/humidity"
            android:inputType="textMultiLine|text"
            android:textSize="24sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:gravity="center"
        android:textColor="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/condition_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/condition"
            android:inputType="textMultiLine|text"
            android:textSize="24sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:gravity="center"
        android:textColor="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/wind_speed_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/wind_speed"
            android:inputType="textMultiLine|text"
            android:textSize="24sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:gravity="center"
        android:textColor="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/wind_direction_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/wind_direction"
            android:inputType="textMultiLine|text"
            android:textSize="24sp" />
    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>